# redcrossquest-v2

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  docker-compose.dev.yml  gcp-deploy.md  gcp-deploy.sh  run_local.md  run_local.sh
backend/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.test.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  cache.py  config.py  dashboards.py  database.py  main.py  roles.py  utils.py
backend/src/models/: user.py
backend/src/routers/: auth.py  classement.py  classement_tronc.py  comptage_pieces_billets.py  config.py  controle_donnees.py  dashboard_quete.py  embed.py  etats_troncs.py  health.py  leaderboard.py  mailing_stats.py  map.py  merci.py  money_bags.py  repartition_jours.py  stats_journalieres.py  superset.py  ul.py  yearly_goals.py
backend/src/schemas/: classement.py  classement_tronc.py  comptage_pieces_billets.py  controle_donnees.py  dashboard_quete.py  etats_troncs.py  leaderboard.py  mailing_stats.py  map.py  merci.py  money_bags.py  repartition_jours.py  stats_journalieres.py  ul.py  ul_settings.py  user.py  yearly_goals.py
backend/tests/: __init__.py  test_auth.py  test_classement.py  test_classement_tronc.py  test_embed.py  test_health.py  test_leaderboard.py  test_map.py
docs/: architecture.md  dashboard-cartes.md  dashboard-classement-global.md  dashboard-leaderboard-collecteurs.md  dashboard-leaderboard-queteurs.md  dashboard-objectifs-annuels.md  dashboard-sacs-banque.md  (+1 more)
(+137 files in other folders)
